# prs

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mobile  README.md  docker-compose.mobile.yml  docker-compose.yml  pyproject.toml
docs/: architecture.md  mac_install.md  mobile_tool_runtime.md  reverse_analysis_subagents.md
scripts/: prs-docker-mobile.ps1  prs-docker-mobile.sh
src/prs_agent/: __init__.py  app.py  baseline.py  bifrost.py  context.py  contracts.py  crew.py  logger.py  main.py  orchestrator.py  registry.py  subagents.py
src/prs_agent/tools/: __init__.py  adb.py  apk_metadata.py  apktool.py  backup_audit.py  base.py  dependency_inventory.py  emulator.py  exploit_chain.py  exploit_verify.py  finding_compile.py  frida.py  frida_probe.py  intent_fuzzer.py  jadx.py  manifest_findings.py  mobsf.py  mobsf_findings.py  network_security_audit.py  pathing.py  secret_scan.py  source_inventory.py  subagents.py  subprocess_tool.py  webview_audit.py
src/prs_agent/web/: app.js  index.html  styles.css
